KJW_10-02 pview rework